Fix internship menu spacing

--- a/src/App.css
+++ b/src/App.css
@@ -238,7 +238,6 @@ h3 {
 .MediaTechInfo {
   margin-top: 8vh;
   text-align: left;
-  margin-left: 8vw;
 }
 .MediaTechInfo h2 {
   /* text-shadow: -1px -1px 0 #26ace2, 1px -1px 0 #26ace2, -1px 1px 0 #26ace2, 1px 1px 0 #26ace2; */
